# phaser-bridge

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  INDEXES.md  README.md  RESUMABILITY-EDGE-CASES.md  commit-reorganization.sh  example-setup.sh  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust-ci.yml
crates/bridges/erigon-bridge/: Cargo.toml  build.rs
crates/bridges/erigon-bridge/proto/customized-erigon/: trie.proto
crates/bridges/erigon-bridge/src/: blockdata_client.rs  blockdata_converter.rs  bridge.rs  client.rs  converter.rs  error.rs  lib.rs  main.rs  proto.rs  streaming_service.rs  trie_client.rs  trie_converter.rs
crates/bridges/evm/erigon-bridge/: Cargo.toml  build.rs
crates/bridges/evm/erigon-bridge/proto/customized-erigon/: blockdata.proto
crates/bridges/evm/erigon-bridge/src/: blockdata_client.rs  blockdata_converter.rs  bridge.rs  client.rs  client_pool.rs  converter.rs  error.rs  kv_client.rs  lib.rs  main.rs  metrics.rs  proto.rs  segment_worker.rs  trie_client.rs  trie_converter.rs
crates/bridges/evm/jsonrpc-bridge/: Cargo.toml
crates/bridges/evm/jsonrpc-bridge/src/: bridge.rs  client.rs  converter.rs  lib.rs  main.rs  metrics.rs  streaming.rs
crates/bridges/jsonrpc-bridge/: Cargo.toml
crates/bridges/jsonrpc-bridge/src/: bridge.rs  error.rs
crates/evm-index/: Cargo.toml
crates/evm-index/examples/: index_transactions.rs  index_with_rocksdb.rs
crates/evm-index/src/: lib.rs
crates/parquet-index/: Cargo.toml  README.md
crates/parquet-index-rocksdb/: Cargo.toml  README.md
crates/parquet-index-rocksdb/src/: lib.rs
crates/parquet-index-schema/: Cargo.toml
crates/parquet-index-schema/src/: lib.rs
crates/parquet-index/benches/: indexing.rs  lookups.rs  parquet_ops.rs
crates/parquet-index/benches/common/: mod.rs
crates/parquet-index/src/: builder.rs  error.rs  lib.rs  reader.rs  storage.rs
crates/parquet-index/tests/: test_indexing_correctness.rs  test_schema.rs
crates/parquet-index/tests/fixtures/: mod.rs
crates/parquet-meta/: Cargo.toml
crates/parquet-meta/src/: main.rs
crates/phaser-bridge/: Cargo.toml
crates/phaser-bridge/src/: bridge.rs  client.rs  descriptors.rs  error.rs  lib.rs  server.rs  subscription.rs
crates/phaser-client/: Cargo.toml
crates/phaser-client/src/: client.rs  error.rs  lib.rs
crates/phaser-client/src/sync/: config.rs  error.rs  mod.rs  progress.rs  syncer.rs  writer.rs
crates/phaser-integration-test/: Cargo.toml
crates/phaser-integration-test/src/: benchmark.rs  loader.rs  main.rs  validator.rs
crates/phaser-metrics/: Cargo.toml
crates/phaser-metrics/src/: lib.rs  segment_metrics.rs  tracing_layer.rs
crates/phaser-parquet-metadata/: Cargo.toml
crates/phaser-parquet-metadata/src/: lib.rs
crates/phaser-query/: Cargo.toml  build.rs  phaser-query.example.yaml
crates/phaser-query/proto/admin/: sync.proto
crates/phaser-query/src/: buffer_manager.rs  catalog.rs  erigon_client.rs  index.rs  indexer.rs  lib.rs  main.rs  parquet_writer.rs  proto.rs  rpc.rs  sql.rs  streaming.rs  streaming_service.rs  streaming_with_writer.rs  streaming_writer.rs  trie_writer.rs
crates/phaser-query/src/sync/: data_scanner.rs  error.rs  metrics.rs  mod.rs  service.rs  worker.rs
crates/phaser-server/: Cargo.toml
crates/phaser-server/src/: bridge.rs  error.rs  lib.rs  server.rs
crates/phaser-types/: Cargo.toml
crates/phaser-types/src/: descriptors.rs  discovery.rs  lib.rs  subscription.rs
crates/schemas/evm/common/: Cargo.toml
crates/schemas/evm/common/src/: block.rs  error.rs  lib.rs  log.rs  proof.rs  rpc_conversions.rs  transaction.rs  trie.rs  types.rs
crates/tools/bridge-test/: Cargo.toml
crates/tools/bridge-test/src/: main.rs
crates/validators/evm/: Cargo.toml
crates/validators/evm/src/: error.rs  executor.rs  lib.rs  validation.rs
crates/validators/evm/src/executors/: core_exec.rs  mod.rs  rayon_exec.rs  tokio_exec.rs
docs/: METRICS_PLANNING.md  design-position-abstraction.md  developing-bridges.md  example-grafana-dash.json  parquet-files.md  phaser-cli.md  supervisor-monitoring.md  testing-full-sync.md  using-bridges.md
scripts/: deploy.sh  generate-env.sh  run-full-sync.sh
scripts/erigon/: start-erigon.sh
