[workspace]
resolver = "2"
members = [
    "crates/phaser-query",
    "crates/phaser-bridge",
    "crates/bridges/evm/erigon-bridge",
    "crates/bridges/evm/jsonrpc-bridge",
    "crates/schemas/evm/common",
    "crates/validators/evm",
    "crates/phaser-integration-test",
    "crates/parquet-index-schema",
    "crates/parquet-index",
    "crates/evm-index",
    "crates/parquet-index-rocksdb",
]

[workspace.dependencies]
# Internal crates
erigon-bridge = { path = "crates/bridges/evm/erigon-bridge" }
jsonrpc-bridge = { path = "crates/bridges/evm/jsonrpc-bridge" }
phaser-bridge = { path = "crates/phaser-bridge" }
evm-common = { path = "crates/schemas/evm/common", features = ["views"] }
validators-evm = { path = "crates/validators/evm" }
core-executor = { path = "../../core-executor" }
parquet-index-schema = { path = "crates/parquet-index-schema" }
parquet-index = { path = "crates/parquet-index" }
evm-index = { path = "crates/evm-index" }
parquet-index-rocksdb = { path = "crates/parquet-index-rocksdb" }

# External dependencies
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"
datafusion = "49.0"
arrow = "56"
arrow-flight = "56"
arrow-array = "56"
typed-arrow = { path = "../../typed-arrow" }
alloy-primitives = "1.3"
alloy-consensus = "1.0"
alloy-rlp = "0.3"
alloy-trie = "0.9"
alloy = { version = "1.0", features = [
    "full",
    "providers",
    "transports",
    "rpc",
    "pubsub",
] }
alloy-network = "1.0"
alloy-rpc-types-eth = "1.0"
alloy-pubsub = "1.0"
alloy-provider = "1.0"
alloy-transport = "1.0"
alloy-transport-http = "1.0"
alloy-transport-ws = "1.0"
alloy-transport-ipc = "1.0"
alloy-json-rpc = "1.0"
rocksdb = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1.0"
anyhow = "1.0"
axum = "0.7"
jsonrpsee = { version = "0.24", features = ["server"] }
rayon = "1.10"
num_cpus = "1.16"
parquet = "56"
fusio = { version = "0.4", features = ["tokio"] }
fusio-parquet = "0.4"
futures = "0.3"

# gRPC dependencies
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"
