[workspace]
resolver = "2"
members = [
    "crates/phaser-query",
    "crates/phaser-types",
    "crates/phaser-client",
    "crates/phaser-server",
    "crates/phaser-metrics",
    "crates/bridges/evm/erigon-bridge",
    "crates/bridges/evm/jsonrpc-bridge",
    "crates/schemas/evm/common",
    "crates/validators/evm",
    "crates/phaser-integration-test",
    "crates/parquet-index-schema",
    "crates/parquet-index",
    "crates/evm-index",
    "crates/parquet-index-rocksdb",
    "crates/parquet-meta",
    "crates/phaser-parquet-metadata",
    "crates/tools/bridge-test",
]

[workspace.package]
version = "0.2.0-alpha.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/edgeandnode/phaser"

[workspace.dependencies]
# Internal crates
erigon-bridge = { path = "crates/bridges/evm/erigon-bridge" }
jsonrpc-bridge = { path = "crates/bridges/evm/jsonrpc-bridge" }
phaser-types = { path = "crates/phaser-types" }
phaser-client = { path = "crates/phaser-client" }
phaser-server = { path = "crates/phaser-server" }
phaser-metrics = { path = "crates/phaser-metrics" }
evm-common = { path = "crates/schemas/evm/common", features = ["views"] }
validators-evm = { path = "crates/validators/evm" }
core-executor = { git = "https://github.com/dwerner/core-executor", rev = "376f2c62abbaceafef639fa24ab82199a0ce8cfe" }
parquet-index-schema = { path = "crates/parquet-index-schema" }
parquet-index = { path = "crates/parquet-index" }
evm-index = { path = "crates/evm-index" }
parquet-index-rocksdb = { path = "crates/parquet-index-rocksdb" }
phaser-parquet-metadata = { path = "crates/phaser-parquet-metadata" }

# External dependencies
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"
datafusion = "53"
arrow = "58"
arrow-flight = "58"
arrow-array = "58"
arrow-schema = "58"
arrow-ipc = "58"
typed-arrow = { version = "0.7.0", default-features = false, features = ["arrow-58"] }
alloy-primitives = "1.3"
alloy-consensus = "1.0"
alloy-rlp = "0.3"
alloy-trie = "0.9"
alloy = { version = "1.0", features = [
    "full",
    "providers",
    "transports",
    "rpc",
    "pubsub",
] }
alloy-network = "1.0"
alloy-rpc-types-eth = "1.0"
alloy-pubsub = "1.0"
alloy-provider = "1.0"
alloy-transport = "1.0"
alloy-transport-http = "1.0"
alloy-transport-ws = "1.0"
alloy-transport-ipc = "1.0"
alloy-json-rpc = "1.0"
rocksdb = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1.0"
anyhow = "1.0"
axum = "0.7"
jsonrpsee = { version = "0.24", features = ["server"] }
rayon = "1.10"
num_cpus = "1.16"
parquet = "58"
fusio = { version = "0.6", features = ["tokio"] }
fusio-parquet = "0.6"
futures = "0.3"

# gRPC dependencies
tonic = { version = "0.14", features = ["transport", "gzip", "zstd", "tls-native-roots"] }
prost = "0.14"
prost-types = "0.14"

# Release profile with debug info for profiling
[profile.release]
debug = true  # Include debug symbols
strip = false # Don't strip symbols

# Optimized release without debug info (for production)
[profile.release-prod]
inherits = "release"
debug = false
strip = true
lto = "thin"
