[package]
name = "parquet-index-rocksdb"
version = "0.1.0"
edition = "2021"

[dependencies]
parquet-index = { workspace = true }
parquet-index-schema = { workspace = true }
rocksdb = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.13"
