[package]
name = "parquet-meta"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "parquet-meta"
path = "src/main.rs"

[dependencies]
parquet = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
phaser-parquet-metadata = { workspace = true }
arrow = { workspace = true }
