[package]
name = "phaser-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Flight client for connecting to phaser bridges with smart sync orchestration"

[dependencies]
# Core types
phaser-types = { path = "../phaser-types" }

# Arrow and Flight
arrow = { workspace = true }
arrow-flight = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-ipc = { workspace = true }

# Async and gRPC
tokio = { workspace = true }
tonic = { workspace = true }
futures = "0.3"
tower = "0.5"
hyper-util = "0.1"
async-stream = "0.3"
async-trait = "0.1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# HTTP types (for InvalidUri)
http = "1.0"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
