[package]
name = "phaser-integration-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "phaser-test"
path = "src/main.rs"

[dependencies]
evm-common = { workspace = true }
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-trie = { workspace = true }
typed-arrow = { workspace = true, features = ["views"] }
arrow-array = { workspace = true }
parquet = "56.1"
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
