[package]
name = "phaser-query"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
datafusion.workspace = true
arrow.workspace = true
arrow-flight.workspace = true
rocksdb.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
axum.workspace = true
jsonrpsee.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
prost-types.workspace = true

# Additional crate-specific dependencies
async-channel = "2.3"
futures = "0.3"
url = "2.5"
bincode = "1.3"
clap = { version = "4.5", features = ["derive", "env"] }
parquet = "55.0"

[build-dependencies]
tonic-build = "0.14"
prost-build = "0.14"
tonic-prost-build = "0.14"
