[package]
name = "phaser-query"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-streaming"
path = "src/bin/test-streaming.rs"

[[bin]]
name = "test-parquet-writer"
path = "src/bin/test-parquet-writer.rs"

[[bin]]
name = "test-schema-discovery"
path = "src/bin/test-schema-discovery.rs"

[[bin]]
name = "test-client-with-discovery"
path = "src/bin/test-client-with-discovery.rs"

[[bin]]
name = "phaser-query"
path = "src/bin/phaser-query.rs"

[dependencies]
# Local dependencies
phaser-bridge = { path = "../phaser-bridge" }

# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
datafusion.workspace = true
arrow.workspace = true
arrow-flight.workspace = true
rocksdb.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
axum.workspace = true
jsonrpsee.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

# Additional crate-specific dependencies
async-channel = "2.3"
futures = "0.3"
url = "2.5"
bincode = "1.3"
clap = { version = "4.5", features = ["derive", "env"] }
parquet = "56.1"

[build-dependencies]
tonic-build = "0.13"
