[package]
name = "phaser-query"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "phaser-query"
path = "src/bin/phaser-query.rs"

[[bin]]
name = "phaser-cli"
path = "src/bin/phaser-cli.rs"

[dependencies]
# Local dependencies
phaser-client = { workspace = true }
phaser-metrics = { path = "../phaser-metrics" }
erigon-bridge = { workspace = true }
evm-common = { workspace = true }
core-executor = { workspace = true }
phaser-parquet-metadata = { workspace = true }

# Typed Arrow support
typed-arrow = { workspace = true }

# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
arrow.workspace = true
arrow-flight.workspace = true
rocksdb.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
axum.workspace = true
jsonrpsee.workspace = true
tonic.workspace = true
tonic-prost = "0.14"
prost.workspace = true
prost-types.workspace = true
num_cpus.workspace = true

# Additional crate-specific dependencies
async-channel = "2.3"
async-stream = "0.3"
futures = "0.3"
url = "2.5"
bincode = "1.3"
clap = { version = "4.5", features = ["derive", "env"] }
parquet = { workspace = true }
serde_yaml = "0.9"
uuid = { version = "1.18", features = ["v4"] }
tokio-stream = "0.1"
alloy-consensus.workspace = true
alloy-rlp.workspace = true
chrono = "0.4.42"
scopeguard = "1.2"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tempfile = "3.10"
