[package]
name = "phaser-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Flight server implementation for phaser bridges"

[dependencies]
# Core types
phaser-types = { path = "../phaser-types" }

# Arrow and Flight (includes server features)
arrow = { workspace = true }
arrow-flight = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }

# Async and gRPC
tokio = { workspace = true }
tonic = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
