[package]
name = "erigon-bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "erigon_bridge"
path = "src/lib.rs"

[[bin]]
name = "erigon-bridge"
path = "src/main.rs"

[dependencies]
# Local dependencies
phaser-bridge = { workspace = true }
evm-common = { workspace = true }
validators-evm = { workspace = true }

# Typed Arrow support
typed-arrow = { workspace = true }

# Arrow and Flight dependencies
arrow = { workspace = true }
arrow-flight = { workspace = true }
arrow-array = "56.1"
arrow-schema = "56.1"
arrow-ipc = "56.1"

# Async and gRPC
tokio = { workspace = true }
tonic = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"
tokio-stream = "0.1"
tower = "0.5"
hyper = { version = "0.14", features = ["server", "tcp", "http1"] }
hyper-util = "0.1"
http = "1.0"

# Erigon gRPC
prost = { workspace = true }
prost-types = { workspace = true }

# Configuration and CLI
clap = { version = "4.5", features = ["derive", "env"] }
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling and logging
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
chrono = "0.4"
hex = "0.4"
async-stream = "0.3"
num_cpus = { workspace = true }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Ethereum types and RLP
alloy-consensus = { workspace = true }
alloy-rlp = { workspace = true }
alloy-primitives = { workspace = true }
derive_more = { version = "1.0", features = ["display"] }

[build-dependencies]
tonic-build = "0.13"