[package]
name = "evm-common"
version = "0.1.0"
edition = "2021"

[dependencies]
typed-arrow = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-network = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }